--- a/part2/phoneBook/src/index.css
+++ b/part2/phoneBook/src/index.css
@@ -1,6 +1,6 @@
 
 
-.message {
+.successMessage {
   color: Green;
   background: lightgrey;
   font-size: 20px;
@@ -9,3 +9,16 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+
+
+.errorMessage {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
